# kiroOne

./: .gitignore  ACCOUNT_IMPORT_UPDATE.md  CLAUDE.md  KIRO_IDE_IMPORT_COMPLETE.md  KIRO_IMPORT_GUIDE.md  MISSING_FEATURES.md  PROJECT_VERIFICATION_REPORT.md  QUICK_START.md  README.md  VERIFICATION.md  index.html  package-lock.json  package.json  start-dev.bat  temp_create_icon.js  vite.config.ts
src/: App.tsx  main.tsx  test-invoke.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt  icon_base64.txt
src-tauri/src/: api_client.rs  claude_sync.rs  lib.rs  main.rs  persistence.rs  state.rs
src-tauri/src/commands/: accounts.rs  claude_code.rs  gateway.rs  mod.rs
src-tauri/src/db/: connection.rs  queries.rs
src-tauri/src/gateway/: auth.rs  mod.rs  server.rs  streaming.rs
src-tauri/src/models/: account.rs  config.rs  message.rs  mod.rs
src-tauri/src/services/: account_mgr.rs  claude_config.rs  http_server.rs  kiro_client.rs  mod.rs
src-tauri/src/utils/: mod.rs  proxy.rs  token.rs
src/components/accounts/: Accounts.tsx
src/components/dashboard/: Dashboard.tsx
src/components/gateway/: Gateway.tsx
src/components/layout/: Sidebar.tsx
src/components/settings/: Settings.tsx
src/components/ui/: Card.tsx
src/lib/: tauri.ts
